# llmfccli

./: .gitignore  CLAUDE.md  PR_DESCRIPTION.md  PR_DESCRIPTION_FINAL.md  PR_DESCRIPTION_UPDATE.md  README.md  init_structure.py  pr_description.md  pyproject.toml  setup.py  setup_ollama_tunnel.sh  test_confirmation.py  test_enhanced_cli.py
backend/: cli.py  cli_completer.py  cli_enhanced_prototype.py  i18n.py  shell_session.py  system_reminder.py
backend/agent/: __init__.py  context.py  loop.py  planner.py  token_counter.py  tool_confirmation.py  tool_executor.py  tool_registry.py  tools.py
backend/cli/: __init__.py  __main__.py  cli_completer.py  command_registry.py  hyperlink.py  interactive_base.py  main.py  output_manager.py  path_utils.py  status_line.py  system_reminder.py
backend/llm/: __init__.py  base.py  client.py  factory.py  ollama.py  openai_client.py  prompts.py  prompts_enhanced.py  tool_adapter.py
backend/remotectl/: INTERACTIVE_CLI.md  README.md  __init__.py  cli.py  cli_interactive.py  cli_standalone.py  client.py  commands.py  model_manager.py  sync_models.py
backend/roles/: __init__.py  manager.py
backend/rpc/: README.md  __init__.py  client.py
backend/session/: __init__.py  manager.py
backend/todo/: __init__.py  manager.py
backend/tools/: __init__.py  base.py  enhanced_edit.py  executor.py  filesystem.py  git.py  parameter_validator.py  schema_enhancer.py  vscode.py
backend/utils/: feature.py  i18n.py  precheck.py  shell_session.py
config/: feature.yaml  language.yaml  llm.yaml  ollama.yaml  roles.yaml  system_reminder.yaml  token_budget.yaml  tools.yaml
config/modelfiles/: claude-qwen.modelfile  code-reviewer.modelfile  doc-writer.modelfile  knowledge-curator.modelfile  programmer.modelfile
config/tools/: analyzer.yaml  executor.yaml  git.yaml  (+3 more)
docs/: CMD_PASSTHROUGH.md  CONFIG_ARCHITECTURE.md  EDIT_FILE_USAGE.md  LAUNCH_MODES.md  MODELFILE.md  MODEL_TUNING.md  RPC_TESTING.md  TAB_COMPLETION.md  TOOL_DESCRIPTION_BEST_PRACTICES.md  TWO_LAYER_CONFIRMATION_TESTS.md  VSCODE_CONFIRM_DIALOG.md  VSCODE_INTEGRATION.md  VSCODE_INTEGRATION_BEST_PRACTICES.md  WINDOWS_USAGE.md  i18n.md  parameter_errors_solution.md  path_hyperlink_feature.md  quick_fix_parameters.md  tool_priority_use_cases.md  vscode_protocol_hyperlink.md
examples/: compact_command_demo.md  edit_file_demo.py  filename_completion_demo.md  git_tool_usage.md  tab_completion_demo.md
scripts/: add_tool_priorities.py  demo_priority_sorting.py  launch-vscode.sh  launch.sh  reload_model.sh  test_tool_priorities.py  update_tools_i18n.py
tests/: debug_cmd_hang.py  run_all_tests.py  run_rpc_tests.py  run_unit_tests.py  test_allow_always.py  test_confirmation_flow.py  test_git_tool.py  test_rpc_e2e_simple.py  test_tab_interactive.py
tests/fixtures/e2e-cases/case1-implement-function/: CMakeLists.txt  prompt.txt
tests/fixtures/e2e-cases/case1-implement-function/include/: calculator.h
tests/fixtures/e2e-cases/case1-implement-function/src/: calculator.cpp
tests/fixtures/e2e-cases/case1-implement-function/tests/: test_calculator.cpp
tests/fixtures/e2e-cases/case2-fix-compile-error/: CMakeLists.txt  prompt.txt
tests/fixtures/e2e-cases/case2-fix-compile-error/include/: string_utils.h
tests/fixtures/e2e-cases/case2-fix-compile-error/src/: string_utils.cpp
tests/fixtures/e2e-cases/case2-fix-compile-error/tests/: test_string_utils.cpp
tests/fixtures/e2e-cases/case3-tdd-write-tests/: CMakeLists.txt  prompt.txt
tests/fixtures/e2e-cases/case3-tdd-write-tests/include/: validator.h
tests/fixtures/e2e-cases/case3-tdd-write-tests/src/: validator.cpp
tests/fixtures/e2e-cases/case3-tdd-write-tests/tests/: test_validator.cpp
tests/fixtures/sample-cpp/: CMakeLists.txt  README.md
tests/fixtures/sample-cpp/src/: CMakeLists.txt  main.cpp  network_handler.cpp  network_handler.h
tests/fixtures/sample-cpp/src/http/: http_module.cpp  http_module.h
tests/fixtures/sample-cpp/src/network/: network_handler.cpp  network_handler.h
tests/fixtures/sample-cpp/src/parser/: json_parser.cpp  json_parser.h
tests/fixtures/sample-cpp/tests/: CMakeLists.txt
vscode-extension/: .gitignore  CHANGELOG.md  LICENSE  QUICKSTART.md  README.md  package-lock.json  package.json  tsconfig.json
(+118 files in other folders)
